--- a/ConsoleApp/App.config
+++ b/ConsoleApp/App.config
@@ -2,19 +2,20 @@
 <configuration>
   <appSettings>
     <add key="Enabled" value="true" />
+    <add key="LogLevel" value="Debug" />
     <add key="InstrumentationKey" value="c346de50-3052-4679-95f7-4df8f67832f4" />
     <add key="Environment" value="Dev" />
-    <add key="ApplicationName" value="DemoApp1" />
+    <add key="ApplicationName" value="ConsoleApp461" />
   </appSettings>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
   <runtime>
     <AppContextSwitchOverrides value="Switch.System.IO.UseLegacyPathHandling=false" />
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.2.0" newVersion="4.0.2.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.2.1" newVersion="4.0.2.1" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Runtime" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
